redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ???
spec:
  replicas: ???
  selector:
    matchLabels:
      app: ???
  template:
    metadata:
      labels:
        app: ???
    spec:
      containers:
      - image: ???
        name: ???
