redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ???
spec:
  type: ClusterIP
  ports:
  - port: ???
    targetPort: ???
  selector:
    app: ???
